# rustray

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh  start.sh
.cargo/: config.toml
examples/: README.md
examples/distributed_ml/: train.rs
examples/image_processing/: image_filter.rs
examples/matrix/: matrix_multiply.rs
examples/prime/: prime_finder.rs
proto/: rustray.proto
scripts/: start.sh  stop.sh
sdk/python/: README.md  setup.py
sdk/python/rustray/: __init__.py  actor.py  core.py  data.py  grpc_client.py  remote.py
src/: connection.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  system.rs
src/api/: mod.rs  settings.rs  system.rs  tasks.rs
src/common/: mod.rs  object_store.rs
src/grpc/: mod.rs
src/head/: mod.rs
src/metrics/: collector.rs  mod.rs
src/migrations/: 20230901000000_init.sql
src/notification/: mod.rs
src/proto/: rustray.proto
src/scheduler/: data_aware_scheduler.rs  load_balancer.rs  mod.rs  task_graph.rs
src/security/: auth.rs  mod.rs
src/task/: mod.rs  notification.rs
src/worker/: metrics.rs  mod.rs  reconnect.rs  worker_node.rs
tests/: integration_test.rs
ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.vue  main.ts
ui/src/components/: ErrorBoundary.vue  SystemMonitor.vue  SystemOverview.vue  TaskList.vue  TaskQueueStatus.vue
ui/src/components/charts/: CPUUsageChart.vue  MemoryUsageChart.vue  NetworkUsageChart.vue  StorageUsageChart.vue
ui/src/config/: api.ts
ui/src/router/: index.ts
ui/src/utils/: axios.ts  request.ts
ui/src/views/: Dashboard.vue  Home.vue  Settings.vue  Tasks.vue
