[package]
name = "rustray"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
debug = true
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 16
panic = 'abort'

[dependencies]
tokio = { version = "1.32", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
uuid = { version = "1.4", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
async-trait = "0.1"
thiserror = "1.0" 