[package]
name = "rustray"
version = "0.1.0"
edition = "2021"
description = "Distributed task processing framework"
readme = "README.md"
repository = "https://github.com/yourusername/rustray"
license = "MIT"

[[example]]
name = "matrix_multiply"
path = "examples/matrix/matrix_multiply.rs"

[[example]]
name = "prime_finder"
path = "examples/prime/prime_finder.rs"

[[example]]
name = "image_filter"
path = "examples/image_processing/image_filter.rs"

[profile.dev]
opt-level = 1
debug = true
incremental = true
codegen-units = 256
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 16
panic = 'abort'

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Futures utilities
futures-util = "0.3"

# UUID generation
uuid = { version = "1.0", features = ["serde", "v4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# gRPC
tonic = "0.9"
prost = "0.11"

# CLI
clap = { version = "4.3", features = ["derive"] }

# Networking
http = "0.2"

# Random number generation
rand = { version = "0.8", features = ["std"] }

# CPU metrics
num_cpus = "1.13"

# Web framework
axum = { version = "0.6", features = ["headers"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["cors"] }

# System metrics
sys-info = "0.9"
sysinfo = "0.29"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
mockall = "0.11"
criterion = "0.4"

[features]
default = []
full = ["tracing/max_level_debug"] 