[package]
name = "rustray"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.20"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"] }
systemstat = "0.2.3"
anyhow = "1.0.75"
thiserror = "1.0.48"
once_cell = "1.18.0"
num_cpus = "1.16.0"
tonic = { version = "0.10.2", features = ["transport", "codegen"] }
prost = "0.12.1"
idna = "0.5.0"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["transport"] }
